# home-server-utils

./: LICENSE  README.md
fancontrold/: Cargo.toml  README.md  fancontrold.service
fancontrold/src/: main.rs
