[package]
name = "fancontrold"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.6.0"
rppal = "0.17.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["time", "macros", "rt"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
home_config = []
